--- a/backend/package.json
+++ b/backend/package.json
@@ -7,19 +7,19 @@
     "dev": "nodemon",
     "production": "pm2 start loader.js --name backend"
   },
-  "author": "Weliton Martins",
+  "author": "Paulo Victor Vasconcelos",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "express-query-int": "^3.0.0",
     "lodash": "^4.17.11",
-    "mongoose": "^5.3.12",
+    "mongoose": "^4.13.17",
     "mongoose-paginate": "^5.0.3",
     "node-restful": "^0.2.6",
-    "pm2": "^3.2.2"
+    "pm2": "^2.10.4"
   },
   "devDependencies": {
-    "nodemon": "^1.18.6"
+    "nodemon": "^1.18.7"
   }
 }
